fix logo on iPhone

--- a/_scss/componenets/_location.scss
+++ b/_scss/componenets/_location.scss
@@ -38,6 +38,9 @@
 
 .location-logo img {
   max-width: 350px;
+  @media (max-width: $width-xs) {
+    max-width: 280px;
+  }
 }
 
 th {
